--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'me.ramswaroop.jbot:jbot:3.0.2'
+	implementation group: 'com.microsoft.bot', name: 'bot-integration-spring', version: '4.6.0-preview7'
+	implementation group: 'org.json', name: 'json', version: '20201115'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
