--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.profiles.active=slack
 
 # slack integrations
 slackApi=https://slack.com/api
-slackBotToken=xoxb-302772955429-1746480225648-GN4ESpPoN2gh5NO5h4jWoXrh
+slackBotToken=
 slashCommandToken=
 # replace the below url with your slack webhook url
 slackIncomingWebhookUrl=https://slack.com
